--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,53 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  background-color: white;
+}
+
+h1 {
+  font-family: Oswald, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  text-align: left;
+  color: #fff;
+}
+
+h2 {
+  font-family: Oswald, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  color: #fff;
+}
+
+#logo {
+  color: #1E2952;
+  float: left;
+  font-size: 280%;
+  margin-left: 30px;
+}
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+  color: #d2e9f4;
+}
+
+.hover-underline-animation:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #0087ca;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
