--- a/frontend/src/styles/MainPage.css
+++ b/frontend/src/styles/MainPage.css
@@ -16,3 +16,157 @@
     border: 1px solid #ccc;
     border-radius: 10px;
 }
+
+nav {
+    background-color: rgb(26, 94, 189);
+    color: #fff;
+    padding: 10px;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+nav ul li {
+    display: inline;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+#menu {
+    float: right;
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+#logo,
+#menu {
+    line-height: 75px;
+}
+
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 25px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    border-bottom: 1px solid #000000
+}
+
+.active {
+    border-bottom: 1px solid #000000
+}
+
+.hero-video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.25);
+    color: white;
+    margin-bottom: 10px;
+    position: relative;
+    overflow: hidden;
+    height: 80vh;
+    width: 100%;
+}
+
+.hero-video h1 {
+    padding: 3%;
+}
+
+.video-bg {
+    position: absolute;
+    z-index: -1;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.wrap-section {
+    margin: 0 auto;
+    text-align: justify;
+    overflow: hidden;
+}
+
+.wrap-content {
+    text-align: center;
+    width: 100%;
+    font-weight: 100;
+    margin-top: 2rem;
+}
+
+.wrap-content span {
+    color: rgb(16, 15, 15);
+    padding: 0;
+    margin-bottom: 2.5rem;
+    margin: 0.5em;
+    font-size: 3rem;
+}
+
+.wrap-content p {
+    color: rgb(16, 15, 15);
+    text-align: center;
+    margin-bottom: 1rem;
+    padding: 0 3%;
+}
+
+.main-content {
+    font-size: 1.6rem;
+    display: grid;
+    place-items: center;
+    min-height: 200px;
+    padding: 1rem;
+}
+
+.item1 {
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.item2 {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.item3 {
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.item4 {
+    grid-area: 2 / 1 / 3 / 2;
+}
+
+.item5 {
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.item6 {
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+.grid-container {
+    background: url('https://i.imgur.com/Ofe8v7D.jpg')center center / cover no-repeat fixed;
+    display: grid;
+    grid-auto-rows: 150px;
+    grid-gap: 10px;
+    padding: 10px;
+    height: 300px;
+}
+
+.grid-container>div {
+    text-decoration-line: underline;
+    color: #F24C00;
+    text-align: center;
+    padding: 20px 0;
+    font-size: 220%;
+}
