--- a/frontend/src/styles/MainPage.css
+++ b/frontend/src/styles/MainPage.css
@@ -85,6 +85,7 @@ nav ul li a {
 
 .hero-video h1 {
     padding: 3%;
+    color: #fff;
 }
 
 .video-bg {
@@ -169,4 +170,48 @@ nav ul li a {
     text-align: center;
     padding: 20px 0;
     font-size: 220%;
+}
+
+.benefits-grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+
+.ben-1 h2 {
+    color: #000000;
+}
+
+@media screen and (min-width: 768px) {
+    .benefits-grid {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+    color: #d2e9f4;
+}
+
+.hover-underline-animation:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #0087ca;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
